--- a/app/views/sites/_site.haml
+++ b/app/views/sites/_site.haml
@@ -1,7 +1,11 @@
 - full = false unless defined?(false)
 %li.story{:class => (@last_child ? "last" : nil)}
   .story-inner
-    %h3= link_to h(site.name), (full ? site.url : site), :class => 'story-title'
+    %h3
+      = link_to h(site.name), (full ? site.url : site), :class => 'story-title'
+      - if site.owner.present?
+        written by
+        = link_to site.owner.display_name, member_path(site.owner)
     %br.clear
     .story-nested-details
       .story-meta-container
@@ -13,4 +17,6 @@
 - if defined?(full) && full
   %h4 Stories for this site
   %ul.stories#site-stories= render :partial => 'stories/story', :collection => @stories
+  - if @stores.blank?
+    %p.empty There are currently no stories for this site.
   #pagination= will_paginate @stories
