--- a/app/views/layouts/rubyocracy.html.haml
+++ b/app/views/layouts/rubyocracy.html.haml
@@ -2,6 +2,7 @@
 %html{:xmlns => "http://www.w3.org/1999/xhtml"}
   %head
     %meta{ :content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type" }
+    %title= page_title
     = stylesheet_link_tag 'rubyocracy'
     = javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js", "rubyocracy"
   %body
